Casio-Broker/cd/k8s/development/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: development
  name: casio-broker
spec:
  selector:
    resource-namespace: jebsen
    resource-env: development
    resource-name: casio-broker
  ports:
    - name: http
      targetPort: 8080
      port: 8080
